--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.zsdcyf</groupId>
-    <artifactId>git-demo</artifactId>
+    <artifactId>git-test</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>git-demo</name>
-    <description>git-demo</description>
+    <name>git-test</name>
+    <description>git-test</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
